feat: add TypeScript declarations
Fixes #304

--- a/demo/vaadin-router-route-parameters-demos.html
+++ b/demo/vaadin-router-route-parameters-demos.html
@@ -57,7 +57,7 @@
     <p>
       Route parameters are bound to the <code>location.params</code> property of
       the route Web Component
-      (<a target="_parent" href="..#/classes/Vaadin.Router.Location"><code>location</code></a>
+      (<a target="_parent" href="..#/classes/Router.Location"><code>location</code></a>
       is set on the route components by Vaadin Router).
     </p>
     <ul>
