--- a/demo/vaadin-router-url-generation-demos.html
+++ b/demo/vaadin-router-url-generation-demos.html
@@ -13,7 +13,7 @@
       object, then generate URLs for that route using the
       <b><code>
         <a target="_parent"
-           href="..#/classes/Vaadin.Router#method-urlForName">
+           href="..#/classes/Router#method-urlForName">
           router.urlForName(name, parameters)</a>
       </code></b> helper instance method.
     </p>
@@ -77,7 +77,7 @@
     <p>
       <b><code>
         <a target="_parent"
-           href="..#/classes/Vaadin.Router#method-urlForPath">
+           href="..#/classes/Router#method-urlForPath">
           router.urlForPath(path, parameters)</a>
       </code></b> is a helper method that generates a URL for
       the given route path, optionally performing substitution of parameters.
@@ -137,7 +137,7 @@
     <p>
       <b><code>
         <a target="_parent"
-           href="..#/classes/Vaadin.Router.Location#method-getUrl">
+           href="..#/classes/Router.Location#method-getUrl">
           location.getUrl(params)</a>
       </code></b> is a method that returns a URL corresponding to the location.
       When given the params argument, it does parameter substitution
