--- a/test/router/lifecycle-events.spec.html
+++ b/test/router/lifecycle-events.spec.html
@@ -167,9 +167,11 @@
         });
 
         it('should keep the location when route is prevented on before enter', async() => {
-          window.preventNavigation = false;
+          // this test is not failed on chrome before #365
+          // probably because of https://bugs.chromium.org/p/chromium/issues/detail?id=983094
+          let preventNavigation = false;
           router.setRoutes([
-            {path: '/', action: onBeforeEnterAction('x-home-view', (location, commands) => window.preventNavigation && commands.prevent())},
+            {path: '/', action: onBeforeEnterAction('x-home-view', (location, commands) => preventNavigation && commands.prevent())},
             {path: '/users', component: 'x-users-list'},
           ]);
           await router.ready;
@@ -178,14 +180,13 @@
           await router.render({pathname: '/users', search: '', hash: ''}, true);
           expect(window.location.pathname).to.be.equal('/users');
 
-          window.preventNavigation = true;
+          preventNavigation = true;
           window.history.back();
           await router.ready;
           expect(window.location.pathname).to.be.equal('/users');
 
           expect(outlet.children[0].tagName).to.match(/x-users-list/i);
           verifyActiveRoutes(router, ['/users']);
-          delete window.preventNavigation;
         });
 
         it('should be able to return a `redirect` command to redirect navigation', async() => {
@@ -368,9 +369,11 @@
         });
 
         it('should keep the location when route is prevented on before leave', async() => {
-          window.preventNavigation = false;
+          // this test is not failed on chrome before #365
+          // probably because of https://bugs.chromium.org/p/chromium/issues/detail?id=983094
+          let preventNavigation = false;
           router.setRoutes([
-            {path: '/', action: onBeforeLeaveAction('x-home-view', (location, commands) => window.preventNavigation && commands.prevent())},
+            {path: '/', action: onBeforeLeaveAction('x-home-view', (location, commands) => preventNavigation && commands.prevent())},
             {path: '/users', component: 'x-users-list'},
           ]);
           await router.ready;
@@ -379,15 +382,16 @@
           await router.render({pathname: '/users', search: '', hash: ''}, true);
           expect(window.location.pathname).to.be.equal('/users');
 
-          window.preventNavigation = true;
           await router.render({pathname: '/', search: '', hash: ''}, true);
+          expect(window.location.pathname).to.be.equal('/');
+
+          preventNavigation = true;
           window.history.back();
           await router.ready;
           expect(window.location.pathname).to.be.equal('/');
 
           expect(outlet.children[0].tagName).to.match(/x-home-view/i);
           verifyActiveRoutes(router, ['/']);
-          delete window.preventNavigation;
         });
 
         it('should ignore any other return value than `prevent`', async() => {
