feat: change `setRoutes` signature and `router.location` params
- `setRoutes` has now the `skipRender` param and return a Promise
- `router.location` includes now `search` and `hash` parameters

--- a/test/router/url-for.spec.html
+++ b/test/router/url-for.spec.html
@@ -54,7 +54,7 @@
             {name: 'user-profile', path: '/users/:userId/(.*)', component: 'x-user-profile'},
             {path: '/users', component: 'x-user-list'}
           ]},
-        ]));
+        ], true));
 
         it('should exist', () => {
           expect(router.urlForName).to.be.instanceof(Function);
