--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -773,6 +773,10 @@
             expect(window.location.pathname).to.equal('/admin');
             expect(window.location.search).to.equal('?a=b');
             expect(window.location.hash).to.equal('#hash');
+
+            expect(router.location.pathname).to.equal('/admin');
+            expect(router.location.search).to.equal('?a=b');
+            expect(router.location.hash).to.equal('#hash');
           });
 
           it('should preserve pathname and search', async() => {
@@ -787,7 +791,6 @@
             expect(window.location.pathname).to.equal('/admin');
             expect(window.location.search).to.equal('?a=b');
             expect(window.location.hash).to.equal('');
-
           });
 
           it('should preserve pathname', async() => {
@@ -1090,6 +1093,22 @@
             ]);
             await router.render('/non-existent/path');
             expect(outlet.children[0]).to.have.deep.property('location.pathname', '/non-existent/path');
+          });
+
+          it('should set the `location` properties on the route component', async() => {
+            router.setRoutes([
+              {path: '/', component: 'x-home-view'},
+              {path: '/admin', component: 'x-admin-view'},
+              {path: '(.*)', component: 'x-not-found-view'},
+            ]);
+            await router.render({
+              pathname: '/non-existent/path',
+              search: 'foo=bar',
+              hash: '#baz'
+            });
+            expect(outlet.children[0]).to.have.deep.property('location.pathname', '/non-existent/path');
+            expect(outlet.children[0]).to.have.deep.property('location.search', 'foo=bar');
+            expect(outlet.children[0]).to.have.deep.property('location.hash', '#baz');
           });
 
           it('should keep route parameters when redirecting to different route', async() => {
@@ -1568,6 +1587,18 @@
             router = new Vaadin.Router(outlet);
           });
 
+          it('result element should remain when rendering the same route', async() => {
+            const result = document.createElement('div');
+
+            await router.setRoutes([
+              {path: '/', action: () => result}
+            ], true);
+
+            await router.render('/');
+            await router.render('/');
+            expect(outlet.children[0]).to.be.equal(result);
+          });
+
           it('commands.redirect() should work when invoked without the `this` context', async() => {
             router.setRoutes([
               {path: '/', component: 'x-home-view'},
@@ -1633,7 +1664,7 @@
                   }
                 }
               },
-            ]);
+            ], true);
 
             await router.render('/');
             expect(outlet.children[0].tagName).to.match(/x-login-view/i);
