test: fix errors in console when runing the suite

--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -816,15 +816,17 @@
           let router;
           beforeEach(async() => {
             router = new Vaadin.Router(outlet);
-            router.setRoutes([
+            // configure router and let it render '/'
+            await router.setRoutes([
               {path: '/', component: 'x-home-view'},
               {path: '/admin', component: 'x-admin-view'},
             ]);
-            await router.render('/');
           });
 
-          afterEach(() => {
+          afterEach(async() => {
             router.unsubscribe();
+            // wait for async tasks to finsish
+            await router.ready;
           });
 
           it('should update the history state after navigation', async() => {
@@ -932,10 +934,10 @@
               expect(outlet.children[0].tagName).to.match(/x-admin-view/i);
             });
 
-            it('should trigger a `vaadin-router-go` event on the `window`', () => {
+            it('should trigger a `vaadin-router-go` event on the `window`', async() => {
               const spy = sinon.spy();
               window.addEventListener('vaadin-router-go', spy);
-              Vaadin.Router.go('');
+              Vaadin.Router.go('/');
               window.removeEventListener('vaadin-router-go', spy);
               expect(spy).to.have.been.called.once;
               expect(spy.args[0][0]).to.have.property('type', 'vaadin-router-go');
@@ -944,10 +946,10 @@
             it('should pass the given pathname in the `detail.pathname` property of the triggered event when Router.go() is called', () => {
               const spy = sinon.spy();
               window.addEventListener('vaadin-router-go', spy);
-              Vaadin.Router.go('/a');
+              Vaadin.Router.go('/admin');
               window.removeEventListener('vaadin-router-go', spy);
               expect(spy).to.have.been.called.once;
-              expect(spy.args[0][0]).to.have.deep.property('detail.pathname', '/a');
+              expect(spy.args[0][0]).to.have.deep.property('detail.pathname', '/admin');
             });
 
             it('should return false by default', () => {
@@ -978,7 +980,8 @@
               expect(!window.dispatchEvent(
                 new CustomEvent('vaadin-router-go', {
                   cancelable: true,
-                  detail: {pathname: '/a'}
+                  // use a valid route
+                  detail: {pathname: '/admin'}
                 })
               )).to.be.true;
             });
