--- a/test/router/lifecycle-events.spec.html
+++ b/test/router/lifecycle-events.spec.html
@@ -853,6 +853,7 @@
 
         beforeEach(async function() {
           router.setRoutes([
+            {path: '/', component: 'div'},
             {path: '/a', action: elementWithAllLifecycleCallbacks('x-a'), children: [
               {path: '/b', action: elementWithAllLifecycleCallbacks('x-b'), children: [
                 {path: '/e', action: elementWithAllLifecycleCallbacks('x-e')}
@@ -861,6 +862,7 @@
             ]},
             {path: '/c', action: elementWithAllLifecycleCallbacks('x-c')}
           ]);
+          await router.ready;
           callbacksLog = [];
         });
 
@@ -1215,6 +1217,51 @@
             'undefined.onAfterEnter'
           ]);
         });
+      });
+
+      it('lifecycle events when reusing element', async() => {
+        const view = document.createElement('x-spy');
+        view.name = 'foo';
+
+        router.setRoutes([
+          {path: '/', component: 'bar'},
+          {path: '/(.)', action: (ctx) => {
+            callbacksLog.push(`${view.name}.action`);
+            const content = document.createElement('div');
+            view.appendChild(content);
+            // Returns always the same view
+            return view;
+          }},
+        ]);
+        await router.ready;
+
+        await router.render('/a');
+        expect(outlet.children[0]).to.be.equal(view);
+        expect(outlet.children[0].children.length).to.be.equal(1);
+        expect(outlet.children[0].location.pathname).to.be.equal('/a');
+        expect(router.location.pathname).to.be.equal('/a');
+
+        await router.render('/b');
+        // Should reuse the same view
+        expect(outlet.children[0]).to.be.equal(view);
+        // Should not modify the view content
+        expect(outlet.children[0].children.length).to.be.equal(2);
+
+        // Should update locations
+        expect(outlet.children[0].location.pathname).to.be.equal('/b');
+        expect(router.location.pathname).to.be.equal('/b');
+
+        // See #355
+        verifyCallbacks([
+          'foo.action',
+          'foo.onBeforeEnter',
+          'foo.connectedCallback',
+          'foo.onAfterEnter',
+          // always call action of the new route
+          'foo.action'
+          // stop calling any callback if result is the same
+          // stop detaching/re-attaching the element
+        ]);
       });
 
       describe('lifecycle events with async action', () => {
